# function-sdk-python

./: .gitignore  CODEOWNERS  OWNERS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
crossplane/function/: __version__.py  logging.py  request.py  resource.py  response.py  runtime.py
crossplane/function/proto/v1/: run_function.proto  run_function_pb2.py  run_function_pb2.pyi  run_function_pb2_grpc.py
crossplane/function/proto/v1beta1/: run_function.proto  run_function_pb2.py  run_function_pb2.pyi  run_function_pb2_grpc.py
tests/: test_request.py  test_resource.py  test_response.py  test_runtime.py
tests/testdata/models/io/k8s/apimachinery/pkg/apis/: __init__.py
tests/testdata/models/io/k8s/apimachinery/pkg/apis/meta/: v1.py
tests/testdata/models/io/upbound/aws/s3/: v1beta2.py
